Split sample apps into multi-modules